--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Javascript Advanced Oppgave 3</title>
   </head>
   <body>
-    <h1>API Oppgave</h1>
+    <h1>Harry Potter</h1>
+    <div id="container">
+      <p id="display">Placeholder</p>
+    </div>
   </body>
 </html>
