--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Javascript Advanced Oppgave 3</title>
   </head>
   <body>
-    <h1>Harry Potter</h1>
+    <h1>Harry Potter Elixirs</h1>
     <div id="container">
-      <p id="display">Placeholder</p>
+      <p id="display"></p>
     </div>
   </body>
 </html>
